<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="beest.caspabusters.RequestActivity">


    <TextView
        android:id="@+id/header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5sp"
        android:text="@string/student_information"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_placeholder" />


    <Spinner
        android:id="@+id/spinner_hall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/earliestTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/earliestTime"
        android:layout_below="@+id/edit_name" />

    <Spinner
        android:id="@+id/spinner_wing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/latestTime"
        android:layout_alignStart="@+id/latestTime"
        android:layout_below="@+id/edit_name" />

    <TextView
        android:id="@+id/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner_wing"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="10sp"
        android:text="@string/wake_up_time_range"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:text="@string/divider"
        android:textSize="25sp" />

    <Button
        android:id="@+id/earliestTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header2"
        android:layout_toLeftOf="@+id/divider"
        android:layout_toStartOf="@+id/divider"
        android:ems="10"
        android:text="@string/earliest_time_placeholder"
        android:textSize="18sp" />

    <Button
        android:id="@+id/latestTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header2"
        android:layout_toEndOf="@+id/divider"
        android:layout_toRightOf="@+id/divider"
        android:ems="10"
        android:text="@string/latest_time_placeholder"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/header3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/earliestTime"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="10sp"
        android:text="@string/special_requests"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/specialRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subheader3"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/subheader3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header3"
        android:text="@string/special_requests_description" />

</RelativeLayout>
